--- a/app/src/main/res/layout/spinner.xml
+++ b/app/src/main/res/layout/spinner.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:hint="Seleccione el pais"
     android:padding="10dp"
     android:spinnerMode="dialog"
     android:textColor="#000000"
-    android:textSize="14sp"
-    tools:text="@android:string/paste_as_plain_text" />
+    android:textSize="18sp" />
