--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".Main2Activity">
 
+
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipeview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -23,6 +28,7 @@
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold" />
+
 
         <ListView
             android:id="@+id/lv_teams"
@@ -45,6 +51,7 @@
             app:backgroundTint="#ee9609"
             app:srcCompat="@drawable/ic_add_white_24dp" />
 </RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
