--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/txt_dia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -20,7 +20,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
         <TextView
-            android:id="@+id/item_number"
+            android:id="@+id/fecha_mes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
@@ -34,14 +34,14 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/txt_hora"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
             tools:text="5:00pm" />
 
         <TextView
-            android:id="@+id/content"
+            android:id="@+id/txt_equipos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
@@ -49,7 +49,7 @@
             tools:text="Equipo @ Equipo" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/txt_estadio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
