--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="blue">#fdaa51</color>
     <color name="ColorPrimary">#17a8fc</color>
+    <color name="black">#020202</color>
 </resources>
