--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -11,21 +11,31 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txt_dia"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView"
-            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/fecha_mes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"
-            tools:text="12/18" />
+            <TextView
+                android:id="@+id/txt_dia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:capitalize="words"
+                android:text="MIE"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+
+            <TextView
+                android:id="@+id/fecha_mes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical|center_horizontal"
+                android:textAppearance="?attr/textAppearanceListItem"
+                tools:text="12/18" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -42,10 +52,11 @@
 
         <TextView
             android:id="@+id/txt_equipos"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"
+
+            android:textColor="@color/black"
+            android:textStyle="bold"
             tools:text="Equipo @ Equipo" />
 
         <TextView
