--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical|center_horizontal"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="?android:attr/selectableItemBackground">
 
     <LinearLayout
         android:layout_width="80dp"
