--- a/app/src/main/res/layout/game_toolbar.xml
+++ b/app/src/main/res/layout/game_toolbar.xml
@@ -4,13 +4,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".GameDetailsActivity">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="116dp"
+            android:layout_height="115dp"
             android:layout_marginTop="4dp"
             android:minHeight="?attr/actionBarSize"
             app:layout_constraintEnd_toEndOf="parent"
@@ -22,129 +22,156 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="8dp">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/ining"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Top 1st"
-                    android:textAppearance="@android:style/TextAppearance.Material.Title"
-                    tools:layout_editor_absoluteX="138dp"
-                    tools:layout_editor_absoluteY="12dp" />
+    <TextView
+        android:id="@+id/ining"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:text="Top 1st"
+        android:textAppearance="@android:style/TextAppearance.Material.Title"
+        tools:layout_editor_absoluteX="140dp"
+        tools:layout_editor_absoluteY="3dp" />
 
-                <TextView
-                    android:id="@+id/women_s"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Visitor Name"
-                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ining" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:foregroundGravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/visitor_score"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textAppearance="@android:style/TextAppearance.Material.Title"
-                    app:layout_constraintHorizontal_bias="0.044"
-                    app:layout_constraintLeft_toRightOf="@+id/women_s"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ining" />
+        <TextView
+            android:id="@+id/women_s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Visitor Name"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ining"
+            android:layout_marginRight="10dp"/>
 
-                <TextView
-                    android:id="@+id/home_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Home Name"
-                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                    app:layout_constraintHorizontal_bias="0.946"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    tools:layout_editor_absoluteY="39dp" />
+        <TextView
+            android:id="@+id/visitor_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textAppearance="@android:style/TextAppearance.Material.Title"
+            app:layout_constraintHorizontal_bias="0.044"
+            app:layout_constraintLeft_toRightOf="@+id/women_s"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ining" />
 
-                <TextView
-                    android:id="@+id/home_score"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textAppearance="@android:style/TextAppearance.Material.Title"
-                    tools:layout_editor_absoluteX="226dp"
-                    tools:layout_editor_absoluteY="39dp" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="50dp"
+            android:layout_height="31dp"
+            app:srcCompat="@drawable/ic_artboard_1"
+            tools:layout_editor_absoluteX="154dp"
+            tools:layout_editor_absoluteY="34dp" />
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="50dp"
-                    android:layout_height="31dp"
-                    app:srcCompat="@drawable/ic_artboard_1"
-                    tools:layout_editor_absoluteX="145dp"
-                    tools:layout_editor_absoluteY="39dp" />
 
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="B"
-                    android:textStyle="bold"
-                    tools:layout_editor_absoluteX="0dp"
-                    tools:layout_editor_absoluteY="85dp" />
+        <TextView
+            android:id="@+id/home_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textAppearance="@android:style/TextAppearance.Material.Title"
+            tools:layout_editor_absoluteX="225dp"
+            tools:layout_editor_absoluteY="30dp" />
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="S"
-                    android:textStyle="bold"
-                    tools:layout_editor_absoluteX="145dp"
-                    tools:layout_editor_absoluteY="85dp" />
+        <TextView
+            android:id="@+id/home_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home Name"
+            android:textAlignment="viewEnd"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            app:layout_constraintHorizontal_bias="0.94"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_editor_absoluteY="30dp"
+            android:layout_marginLeft="10dp"/>
 
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="O"
-                    android:textStyle="bold"
-                    tools:layout_editor_absoluteX="260dp"
-                    tools:layout_editor_absoluteY="85dp" />
+    </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="65dp"
-                    android:layout_height="27dp"
-                    app:srcCompat="@drawable/ic_artboard_16"
-                    tools:layout_editor_absoluteX="0dp"
-                    tools:layout_editor_absoluteY="82dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="50dp"
-                    android:layout_height="22dp"
-                    app:srcCompat="@drawable/ic_artboard_16_copy_5"
-                    tools:layout_editor_absoluteX="159dp"
-                    tools:layout_editor_absoluteY="82dp" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="B"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="85dp" />
 
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="45dp"
-                    android:layout_height="24dp"
-                    app:srcCompat="@drawable/ic_artboard_16_copy_9"
-                    tools:layout_editor_absoluteX="278dp"
-                    tools:layout_editor_absoluteY="82dp" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="65dp"
+            android:layout_height="27dp"
+            app:srcCompat="@drawable/ic_artboard_16"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="82dp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="S"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="145dp"
+            tools:layout_editor_absoluteY="85dp" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="50dp"
+            android:layout_height="22dp"
+            app:srcCompat="@drawable/ic_artboard_16_copy_5"
+            tools:layout_editor_absoluteX="159dp"
+            tools:layout_editor_absoluteY="82dp" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="O"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="260dp"
+            tools:layout_editor_absoluteY="85dp" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="45dp"
+            android:layout_height="24dp"
+            app:srcCompat="@drawable/ic_artboard_16_copy_9"
+            tools:layout_editor_absoluteX="278dp"
+            tools:layout_editor_absoluteY="82dp" />
+    </LinearLayout>
+</LinearLayout>
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.Toolbar>
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:text="ToolBar Tutorial"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="ToolBar Tutorial"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 </android.support.constraint.ConstraintLayout>
