--- a/app/src/main/res/layout/activity_game_details.xml
+++ b/app/src/main/res/layout/activity_game_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GameDetailsActivity">
-    <include
+     <include
         android:id="@+id/toolbar"
         layout="@layout/game_toolbar"/>
 
@@ -15,27 +15,36 @@
         android:layout_below="@id/toolbar"
         android:orientation="vertical">
 
-        <TextView
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/game_details_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hola Game details"
-            android:textAlignment="center" />
+            android:fadingEdge="horizontal">
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <android.support.design.widget.TabItem
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:text="INFO" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hello otra cosa" />
-            </LinearLayout>
-        </ScrollView>
+            <android.support.design.widget.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Jugadas" />
+
+            <android.support.design.widget.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BOX SCORE" />
+
+        </android.support.design.widget.TabLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager_game_details"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
 
     </LinearLayout>
 
